appId: ${APP_ID}
---
- launchApp
- tapOn:
    id: "root-screen-example-BottomTabsAndStack"
- tapOn: "More details 0"
- assertVisible: "More details 1"

- doubleTapOn:
    id: "bottom-tabs-A-tab"
- assertVisible: "More details 0"