appId: ${APP_ID}
---
- launchApp
- assertVisible:
    id: "root-screen-example-BottomTabsAndStack"
- tapOn:
    id: "root-screen-example-BottomTabsAndStack"
- assertVisible:
    id: "bottom-tabs-more-details-button"