appId: ${APP_ID}
name: Go to chats and check if label is visible
onFlowStart:
  - runFlow: setup.yaml
  - runScript: setup.js
onFlowComplete:
  - runFlow: teardown.yaml
  - runScript: teardown.js
---
- launchApp
- tapOn: 'Events'
- tapOn:
    id: 'events-stack-animation-picker'
- tapOn:
    text: 'Go to chats'

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: 'Events'

- runFlow:
    when:
      platform: Android
    commands:
      - tapOn: 'Navigate up'

- assertVisible: 'I should be visible! 🙌'
