# Mirror of e2e/examplesTests/simpleNativeStack.e2e.ts (same 3 its, toBeVisible -> assertVisible)
appId: org.reactjs.native.example.FabricExample
name: Simple Native Stack
---
- launchApp
# it('should go to main screen')
- assertVisible:
    id: "root-screen-example-SimpleNativeStack"
- tapOn:
    id: "root-screen-example-SimpleNativeStack"
- assertVisible:
    id: "simple-native-stack-go-to-detail"

# it('should go to detail screen')
- tapOn:
    id: "simple-native-stack-go-to-detail"
- assertVisible:
    id: "simple-native-stack-detail-go-back"

# it('should go back to main screen')
- tapOn:
    id: "simple-native-stack-detail-go-back"
- assertVisible:
    id: "simple-native-stack-go-to-detail"
