# Mirror of e2e/issuesTests/Test2809.e2e.ts (open screen + same assertions where applicable)
appId: org.reactjs.native.example.FabricExample
name: Test2809
---
- launchApp
- scrollUntilVisible:
    element:
      id: "root-screen-issue-tests"
    direction: DOWN
- tapOn:
    id: "root-screen-issue-tests"
- tapOn:
    id: "issue-tests-search-bar"
- inputText: "Test2809"
- tapOn:
    id: "issue-tests-Test2809"
